# Rigor-Ball-Arithmetic

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  report.yml
benches/: constants.rs  elementary.rs  special.rs
docs/: arb-comparison.md
examples/: bench_smoke.rs  debug_retry.rs  dependency_problem.rs  digits_100k.rs  quick_timing.rs
scripts/: bench.ps1  bench.sh  compare_arb.sh  flamegraph.sh
src/: ball.rs  bernoulli.rs  binsplit.rs  constants.rs  elementary.rs  fp.rs  gamma.rs  int.rs  lib.rs  mag.rs  mpn.rs  testutil.rs  zeta.rs
tests/: identities.rs  inclusion.rs
tools/arb-bench/: Cargo.toml
tools/arb-bench/src/: main.rs
tools/arb-diff/: Cargo.toml
tools/arb-diff/src/: main.rs
